syntax = "proto3";

enum PushType {
  IOS = 0;
  AND = 1;
  IOD = 2;
}

message PushRegistration {
  int32 version = 1;
  string pushToken = 2;
  PushType pushType = 3;
  string deviceId = 4;
}
